fix confirmacionRecuadro and leave community

--- a/universe/styles/ForoStyles.module.css
+++ b/universe/styles/ForoStyles.module.css
@@ -129,6 +129,9 @@
     width: 40%;
     
 }
+.verRespuestas > *{
+    margin: 5px;
+}
 .verRespuestas:hover{
     background-color: #95a6a3;
     cursor: pointer;
