--- a/universe/styles/ForoStyles.module.css
+++ b/universe/styles/ForoStyles.module.css
@@ -116,6 +116,22 @@
     border-radius: 30px;
 }
 
+.preguntaView {
+    display: grid;
+    position: relative;
+    grid-template-columns:  15% 1fr 20%;
+    width: 100%;
+    height: 150px;
+    margin: 10px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 25px;
+    background: #A9E9DF;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
+
 .cuerpo{
     height: 100%;
     display: grid;
@@ -225,12 +241,19 @@
     color: #000000;
 }
 
-.votos {
+
+.verRespuestasview > *{
     position: absolute;
-    width: 30px;
-    height: 30px;
-    left: 93%;
-    top: 31%;
+    width: 110px;
+    height: 45px;
+    left: 100%;
+    top: 8%;
+
+}
+.verRespuestasview:hover{
+    background-color: #95a6a3;
+    cursor: pointer;
+ 
 }
 
 .upvote {
