--- a/universe/styles/ForoStyles.module.css
+++ b/universe/styles/ForoStyles.module.css
@@ -105,7 +105,7 @@
 .pregunta {
     display: grid;
     position: relative;
-    grid-template-columns:  15% 1fr 20%;
+    grid-template-columns:  15% 1fr 15%;
     width: 90%;
     height: 243px;
     margin: 20px;
@@ -157,7 +157,7 @@
 .respuesta {
     display: grid;
     position: relative;
-    grid-template-columns:  15% 1fr 20%;
+    grid-template-columns:  15% 1fr 15%;
     width: 90%;
     height: 200px;
     margin: 20px;
@@ -258,6 +258,22 @@
 
 .upvote {
     margin-bottom: 15px;
+    margin-right: 15px;
+    border-radius: 10px;
+}
+.upvote:hover {
+    background-color: #95a6a3;
+    cursor: pointer;
+}
+
+.downvote {
+    margin-bottom: 15px;
+    margin-right: 15px;
+    border-radius: 10px;
+}
+.downvote:hover {
+    background-color: #95a6a3;
+    cursor: pointer;
 }
 
 .img_votos {
@@ -271,7 +287,13 @@
     width: 25px;
     margin-bottom: 5px;
 }
-
+.votos{
+    display: flex;
+    margin-top: 25px;
+}
+.votos div{
+    margin-top: 10px;
+}
 .count_text {
     font-size: 15px;
     left: 30%;
