--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -112,8 +112,9 @@ form {
   max-height: auto;
   background-color: #E8FFFB;
   border-radius: 10px;
-  top: 25%;
-  left: 20%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 10;
   transition: 850ms;
 }
