--- a/universe/styles/pestaniaStyle.module.css
+++ b/universe/styles/pestaniaStyle.module.css
@@ -1,5 +1,9 @@
 .formSearch{
     position: relative;
+    margin-top: 40px;
+    
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 500px;
     min-height: 50px;
     background-color: white;
