--- a/universe/styles/homeComunidadStyles.module.css
+++ b/universe/styles/homeComunidadStyles.module.css
@@ -120,8 +120,7 @@
 }
 
 .formProfile {
-    position: static;
-    width: 100%;
+    width: 90%;
     min-height: 0;
     max-height: 100%;
     background-color: transparent;
@@ -130,6 +129,7 @@
     left: auto;
     z-index: auto;
     transition: none;
+    transform: none;
     margin-top: 30px;
     margin-bottom: 30px;
     display: flex;
