--- a/universe/styles/registerStyle.module.css
+++ b/universe/styles/registerStyle.module.css
@@ -1,13 +1,13 @@
 .container {
   background-color: #ffffff;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: space-between;
+  align-items: space-between;
   padding: 3rem;
-  position: relative;
+  
   
 }
 
