--- a/universe/styles/loginStyle.module.css
+++ b/universe/styles/loginStyle.module.css
@@ -97,13 +97,18 @@
     border-radius: 50px;
     background-color: #285f76;
     color: #ffffff;
-    width: 160px;
+    width: 200px;
     height: 40px;
     align-self: center;
+    padding: 10px;
     margin-top: 1.5rem;
+    margin-bottom: 1.0rem;
   }
   
-  
+  .noMargin {
+    margin: 0 !important;
+  }
+
   .iconImage {
     max-width: 100%;
     height: 130px;
@@ -138,6 +143,30 @@
     margin-top: 5.5rem;
   }
 
+
+  .containerq {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
+  .loginLink {
+    margin-top: 1rem;
+    text-align: center;
+    color: #5b5b5b;
+    font-size: 0.9rem;
+  }
+  
+  .loginText {
+    color: #5b5b5b;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  
+  .loginText:hover {
+    color: #555;
+  }
+  
 
   @media (max-width: 767px) {
 
